tests/udn_bad_path_test_2/blue_ns_udn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: k8s.ovn.org/v1
kind: UserDefinedNetwork
metadata:
  name: separate-namespace
  namespace: blue
spec:
  topology: Layer2
  layer3: # error  - this should be layer2 (as in topology)
    role: Primary
    subnets:
      - cidr: 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: blue
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
